idea-hub-updated-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 180s
    haproxy.router.openshift.io/hsts_header: "max-age=31536000;includeSubDomains;preload"
    router.openshift.io/router-selector: "shard=internal"
  labels:
    shard: internal
    app: idea-hub-updated
    paas.company.com/appcode: TAAI-001
  name: idea-hub-updated
  namespace: trend-analysis-using-ai--runtime-int
spec:
  host: idea-hub-updated-trend-analysis-using-ai--runtime-int.apps.int.spoke.preprod.us-east-1.aws.your-domain.com
  pathType: Prefix
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: idea-hub-updated
    weight: 100
  port:
    targetPort: 8080-tcp
